--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     <div class="row mx-auto">
       <div class="footerIcons pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
       <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
-      <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
+      <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" target="blank"
           style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
-      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
+      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" target="blank" style="color: #6f795a"><i
             class="fab fa-github-square"></i></a></div>
     </div>
   </footer>
