rename some divs for readablity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </nav>
 
-      <div class="container">
+      <section class="container">
         <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.89);">
           <div class="col-xl-12 mt-3">
             <div class="row">
@@ -39,6 +39,7 @@
                 </div>
 
                 <div>
+                  
                   <h3 class="mb-4 mt-1">About Me</h3>
                   <p id="aboutMe">Hello, I'm Kaitlyn Steagall! I'm a full stack developer, with a focus on front-end
                     development.
@@ -78,6 +79,7 @@
                       </div>
                     </div>
                   </div>
+
                 </div>
 
               </div>
@@ -85,7 +87,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
     </div>
 
