--- a/portfolio.html
+++ b/portfolio.html
@@ -12,25 +12,21 @@
 </head>
 
 <body style="background-image: url('./assets/images/flower.jpg');">
-  <div id="page-container">
+  <page id="page-container">
     <div id="content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color:rgba(255, 255, 255, 0.87);">
         <div class="container">
-
           <a class="navbar-brand mx-auto text-center" href="./index.html">
             <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall <br />
               <h6 id="email-and-ph">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503)679-6794</h6>
             </h2>
           </a>
-
         </div>
       </nav>
 
-      <div class="container">
-
+      <section class="container">
         <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.801);">
-
           <div class="col-xl-3 mb-3 mt-5">
 
             <div class="row">
@@ -78,17 +74,13 @@
               </div>
             </div>
 
-
           </div>
-
         </div>
-
-      </div>
+      </section>
 
     </div>
 
-
-    <div class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
+    <footer class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
       style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.87)">
       <div class="row mx-auto">
         <div class="footerIcons pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
@@ -98,9 +90,9 @@
         <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
               class="fab fa-github-square"></i></a></div>
       </div>
-    </div>
-  </div>
+    </footer>
 
+  </page>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
