adj footer text align w/ padding, update about me, make rows/cols on porfolio better format

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
           <a class="navbar-brand mx-auto text-center" href="./index.html">
             <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall <br />
-              <h6 id="email-and-ph">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503)679-6794</h6>
+              <h6 id="email-and-ph">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503) 679-6794</h6>
             </h2>
           </a>
         </div>
@@ -41,21 +41,17 @@
                 <div>
                   
                   <h3 class="mb-4 mt-1">About Me</h3>
-                  <p id="aboutMe">Hello, I'm Kaitlyn Steagall! I'm a full stack developer, with a focus on front-end
-                    development.
+                  <p id="aboutMe">Hello and welcome! My name is Kaitlyn Steagall and I'm a full stack developer, with a focus on front-end
+                    development. 
+                    <!-- I love finding the patterns in everything -->
                     <br /><br />
-                    I'm a born and raised Oregonian who prides themself on being a detail oriented individual. It's an
-                    attribute that all of my
-                    former managers will attest to.
-                    <!-- I love finding the patterns in everything and perfecting the learn and improving always, pleaser, perfection, team player -->
+                    I have experience in HTML, CSS, Bootstrap, Javascript/JQuery, React, and more! Creating visually attractive and easy-to use 
+                    web applications makes me feel fulfilled. It allows me to brings out my creative side and utilize my desires to use 
+                    logic and paying attention to small details. Being detail oriented is something all of my former managers 
+                    would list as one of my strong attributes and is something I pride myself on. I'm also an eager learner and team-player hoping
+                    to grow as a webdev and individual each day.
                     <br /><br />
-                    So far I have experience in HTML, CSS, Bootstrap, Javascript, JQuery, and Node. Right now I really
-                    enjoy
-                    working UI because
-                    making visually pleasing sites and apps brings out my creative side, but I'm excited to keep
-                    learning
-                    and growing as a web developer.
-                    <br /><br />
+                    Check out my portfolio and resume to learn about me professionally! And if you click on my picture, learn about me as an individual.
                   </p>
                   
                   <div class="row">
@@ -63,9 +59,7 @@
                       <div class="card text-center">
                         <div class="card-body">
                           <span class="card-title"><a href="./assets/pdf/WebDevResume.pdf" target="blank"
-                              style="color: #89a670">My
-                              Resume
-                              <i class="far fa-file-pdf"></i></a></span>
+                              style="color: #89a670">My Resume <i class="far fa-file-pdf"></i></a></span>
                         </div>
                       </div>
                     </div>
@@ -73,8 +67,8 @@
                     <div class="col-xl-4 col-md-5 col-sm-5 col-xs-5 mr-auto mb-4">
                       <div class="card text-center">
                         <div class="card-body">
-                          <span class="card-title"><a href="./portfolio.html" style="color: #89a670">My
-                              Portfolio <i class="fas fa-book-open"></i></a></span>
+                          <span class="card-title"><a href="./portfolio.html" style="color: #89a670">
+                            My Portfolio <i class="fas fa-book-open"></i></a></span>
                         </div>
                       </div>
                     </div>
@@ -118,12 +112,12 @@
   <footer class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
     style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.87)">
     <div class="row mx-auto">
-      <div class="footerIcons pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
+      <div class="footerIcons pr-3 pl-4"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
       <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
       <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" target="blank"
-          style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
+        style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
       <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" target="blank" style="color: #6f795a"><i
-            class="fab fa-github-square"></i></a></div>
+        class="fab fa-github-square"></i></a></div>
     </div>
   </footer>
 
