--- a/portfolio.html
+++ b/portfolio.html
@@ -25,74 +25,106 @@
         </div>
       </nav>
 
-      <section class="container">
-        <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.801);">
-          <div class="col-xl-3 mb-3 mt-5">
+      <section class="container" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.801);">
 
-            <div class="row">
-              <div class="col-xl-12 col-md-5 mx-auto mb-4">
-                <div class="card text-center">
-                  <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
-                      style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
-                  <div class="card-body">
-                    <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
-                        style="color: #89a670">NetPets</a></h5>
-                    <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative
-                      code</a>
-                  </div>
-                </div>
+        <div class="row mx-auto my-3">
+          <div class="col-xl-3 col-md-8 mx-auto my-4">
+            <div class="card text-center" style="height: 21.75rem;">
+              <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
+                  style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
+                    style="color: #89a670">NetPets</a></h5>
+                <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative
+                  code</a>
               </div>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-xl-12 col-md-5 mx-auto mb-4">
-                <div class="card text-center">
-                  <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;"
-                    class="card-img-top mx-auto mt-3" alt="">
-                  <!-- Add GIF/pic once code is updated/page is more styled-->
-                  <div class="card-body">
-                    <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/"
-                        style="color: #89a670">Puffin Power</a></h5>
-                    <a href="https://github.com/KaitlynSteagall/Project" style="color: #89a670">Checkout more
-                      collaborative code</a>
-                  </div>
-                </div>
+          <div class="col-xl-3 col-md-8 mx-auto my-4">
+            <div class="card text-center" style="height: 21.75rem;">
+              <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;" class="card-img-top mx-auto my-4"
+                alt="">
+              <!-- Add GIF/pic once code is updated/page is more styled-->
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #89a670">Puffin
+                    Power</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Project" style="color: #89a670">Checkout more
+                  collaborative code</a>
               </div>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-xl-12 col-md-5 mx-auto mb-4">
-                <div class="card text-center">
-                  <img src="" class="card-img-top" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
-                  <div class="card-body">
-                    <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
-                        style="color: #89a670">Animal GIPHY API</a></h5>
-                    <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my
-                      ajax code</a>
-                  </div>
-                </div>
+          <div class="col-xl-3 col-md-8 mx-auto my-4">
+            <div class="card text-center" style="height: 21.75rem;">
+              <img src="" class="card-img-top" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
+                    style="color: #89a670">Animal GIPHY API</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my
+                  ajax code</a>
               </div>
             </div>
-
           </div>
         </div>
+
+        <!-- <div class="row mx-auto my-3">
+          <div class="col-xl-3 col-md-5 mx-auto my-4">
+            <div class="card text-center">
+              <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
+                  style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
+                    style="color: #89a670">NetPets</a></h5>
+                <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative
+                  code</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-md-5 mx-auto my-4">
+            <div class="card text-center">
+              <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;" class="card-img-top mx-auto mt-3"
+                alt="">
+              Add GIF/pic once code is updated/page is more styled
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #89a670">Puffin
+                    Power</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Project" style="color: #89a670">Checkout more
+                  collaborative code</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-md-5 mx-auto my-4">
+            <div class="card text-center">
+              <img src="" class="card-img-top" alt=""> Add GIF/pic once code is updated/page is more styled
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
+                    style="color: #89a670">Animal GIPHY API</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my
+                  ajax code</a>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
       </section>
 
     </div>
-
-    <footer class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
-      style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.87)">
-      <div class="row mx-auto">
-        <div class="footerIcons pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
-        <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
-        <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
-            style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
-        <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
-              class="fab fa-github-square"></i></a></div>
-      </div>
-    </footer>
-
   </page>
+
+  <footer class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
+    style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.87)">
+    <div class="row mx-auto">
+      <div class="footerIcons pr-3 pl-4"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
+      <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
+      <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
+        style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
+      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
+        class="fab fa-github-square"></i></a></div>
+    </div>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
