--- a/index.html
+++ b/index.html
@@ -51,9 +51,80 @@
                     would list as one of my strong attributes and is something I pride myself on. I'm also an eager learner and team-player hoping
                     to grow as a webdev and individual each day.
                     <br /><br />
-                    Check out my portfolio and resume to learn about me professionally! And if you click on my picture, learn about me as an individual.
+                    Check out my reviews, portfolio, and resume to learn about me professionally! And if you click on my picture, learn about me as an individual.
                   </p>
+
+                  <div class="row">
+                    <div class="col-xl-6 col-md-11 mx-auto">
+                      <div class="card text-center" style="background-color: rgba(255, 255, 255, 0); border: none;">
+                        <div class="card-body pb-0">
+                          <p class="reviews mb-0">
+                            As Kaitlyn's full-stack bootcamp instructor, I immediately recognized her natural talents as a developer. 
+                            She posses a keen eye for design and seemed to easily comprehend the full web dev stack. When it came time to 
+                            turn project ideas into a spec and UI flow, Kaitlyn was first in class, every time. I often used her work as an 
+                            example. I also witnessed her ability to act as a team member and handle project adversity without skipping a beat. 
+                            Any team in a position to add Kaitlyn as a new member should consider themselves lucky. 
+                            <br /><br />
+                            <span style="float: right">&mdash; Tim Ashton, former coding bootcamp instructor</span>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-xl-6 col-md-11 mx-auto">
+                      <div class="card text-center" style="background-color: rgba(255, 255, 255, 0); border: none;">
+                        <div class="card-body pb-0">
+                          <p class="reviews mb-0">
+                            I worked with Kaitlyn on a project with two other people, and she is a joy to collaborate with. 
+                            She is responsive, eager to contribute, and has a talent for design and organization. Kaitlyn really cares about 
+                            creating a quality product, and puts in the time to do some research and take her work that extra mile. 
+                            Anything she doesn't know right away she looks into, and I've seen her time and again make that deep dive to add 
+                            that extra flash to her work. She knows how to be a productive and supportive team player, and would be an asset to 
+                            any professional environment. I would absolutely work with Kaitlyn again.
+                            <br /><br />
+                            <span style="float: right;">&mdash; Noah Sylwester, former project teammate</span> 
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   
+                  <div class="row">
+                    <div class="col-xl-6 col-md-11 mx-auto">
+                      <div class="card text-center" style="background-color: rgba(255, 255, 255, 0); border: none;">
+                        <div class="card-body pb-0">
+                          <p class="reviews mb-0">
+                            I've worked with Kaitlyn on multiple full stack group projects, and every time she's put out a gorgeous view 
+                            in what seems like the first five minutes and then moved on to diligently start building a solid control architecture. 
+                            She more than pulls her weight in any team, always maintaining lines of communication, keeping up a steady stream of good 
+                            PR submissions and approvals, and fluidly working where needed to make sure the job gets done and done well. She does her 
+                            research, learns new libraries quickly, and I'd happily work with her again at any time.
+                            <br /><br />
+                            <span style="float: right">&mdash; Mars Getsoian, former project teammate</span>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-xl-6 col-md-11 mx-auto mb-3">
+                      <div class="card text-center" style="background-color: rgba(255, 255, 255, 0); border: none;">
+                        <div class="card-body">
+                          <p class="reviews">
+                            Kaitlyn has a talent for web design; she creates beautiful web pages with HTML, CSS & Bootstrap. 
+                            We worked together on a group project together during our full stack web development certificate program, 
+                            and Kaitlyn was a very involved team member. She communicates well with her team about what she's doing. 
+                            She holds herself to a very high standard and always presents polished work. 
+                            Even when she was unsure how to do something, she put in the time and figured it out. Her sense of color, 
+                            spacing, and layout are spot on. I highly recommend Kaitlyn for any web design / UI/UX / web developer / 
+                            front-end developer positions.
+                            <br /><br />
+                            <span style="float: right">&mdash; Renée Petit, former project teammate</span>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                   <div class="row">
                     <div class="col-xl-4 col-md-5 col-sm-5 col-xs-5 ml-auto mb-4">
                       <div class="card text-center">
