--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,8 @@
         </div>
 
         <!-- <div class="row mx-auto my-3">
-          <div class="col-xl-3 col-md-5 mx-auto my-4">
-            <div class="card text-center">
+          <div class="col-xl-3 col-md-8 mx-auto my-4">
+            <div class="card text-center" style="height: 21.75rem;">
               <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
                   style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
               <div class="card-body">
@@ -82,8 +82,8 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-5 mx-auto my-4">
-            <div class="card text-center">
+          <div class="col-xl-3 col-md-8 mx-auto my-4">
+            <div class="card text-center" style="height: 21.75rem;">
               <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;" class="card-img-top mx-auto mt-3"
                 alt="">
               Add GIF/pic once code is updated/page is more styled
@@ -96,8 +96,8 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-5 mx-auto my-4">
-            <div class="card text-center">
+          <div class="col-xl-3 col-md-8 mx-auto my-4">
+            <div class="card text-center" style="height: 21.75rem;">
               <img src="" class="card-img-top" alt=""> Add GIF/pic once code is updated/page is more styled
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
