fix some grammar in about me

--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                   <h3 class="mb-4 mt-1">About Me</h3>
                   <p id="aboutMe">Hello and welcome! My name is Kaitlyn Steagall and I'm a full stack developer, with a focus on front-end
                     development. 
-                    <!-- I love finding the patterns in everything -->
                     <br /><br />
                     I have experience in HTML, CSS, Bootstrap, Javascript/JQuery, React, and more! Creating visually attractive and easy-to use 
-                    web applications makes me feel fulfilled. It allows me to brings out my creative side and utilize my desires to use 
-                    logic and paying attention to small details. Being detail oriented is something all of my former managers 
-                    would list as one of my strong attributes and is something I pride myself on. I'm also an eager learner and team-player hoping
-                    to grow as a webdev and individual each day.
+                    web applications makes me feel fulfilled. It allows me to bring out my creative side and utilize my desire to use 
+                    logic and pay attention to small details. Being detail oriented is something all of my former managers and teammates 
+                    would list as one of my strengths and is something I pride myself on. I am eager to learn and grow as a webdev and individual 
+                    and always excited to contribute everything I can to my team.
                     <br /><br />
-                    Check out my reviews, portfolio, and resume to learn about me professionally! And if you click on my picture, learn about me as an individual.
+                    Check out my reviews, portfolio, and resume to learn about me professionally! And if you click on my picture, learn 
+                    a little about me as an individual.
                   </p>
 
-                  <div class="row">
+                  <reviews class="row">
                     <div class="col-xl-6 col-md-11 mx-auto">
                       <div class="card text-center" style="background-color: rgba(255, 255, 255, 0); border: none;">
                         <div class="card-body pb-0">
@@ -87,9 +87,9 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </reviews>
                   
-                  <div class="row">
+                  <reviews class="row">
                     <div class="col-xl-6 col-md-11 mx-auto">
                       <div class="card text-center" style="background-color: rgba(255, 255, 255, 0); border: none;">
                         <div class="card-body pb-0">
@@ -123,7 +123,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </reviews>
 
                   <div class="row">
                     <div class="col-xl-4 col-md-5 col-sm-5 col-xs-5 ml-auto mb-4">
